Add armamento and other gifs and image. Modify last html archives summary for a better interaction with the user.

--- a/Comienzo/comienzo.html
+++ b/Comienzo/comienzo.html
@@ -29,20 +29,14 @@
     </figure>
 
     <details>
-        <summary> El sendero oscuro de un bosque </summary>
+        <summary> ¿Qué decides? </summary>
+        <ul>
+            <li><a href="Bosque.html"> Un sendero oscuro de un bosque </a></li>
+            <li><a href="Muerte/MoristeMamut.html">Ir a un camino con una manada de mamuts</a></li>
+    
+        </ul>
         
-    </details>
-
-    <details>
-        <summary> Un camino lleno de mamuts </summary>
-    </details>
-
-
-    <ul>
-        <li><a href="Bosque.html"> Ir al bosque </a></li>
-        <li><a href="Muerte/MoristeMamut.html">Ir al camino de mamuts</a></li>
-
-    </ul>
+    </details>    
 
     <footer>
         <p>Escrito por: Fabián Morales - Survival of the Fittest</p>
