Add weapons craft. This is a fork in the story ocurrs.

--- a/Comienzo/Armamento.html
+++ b/Comienzo/Armamento.html
@@ -23,7 +23,7 @@
         <p>Dado el caso, decides sentarte para descansar un poco y analizar la situación.</p>
         <p> - </p>
         <p>Luego de 10 minutos de reflexión, recuerdas que te viste todas las temporadas de "supervivencia al desnudo" y sabes que entre lo primordial, debes tener una herramienta de caza.</p>
-        <p>Por suerte, caíste en una pradera donde crecen alisos pequeños con madera fina y juncos.</p>
+        <p>Por suerte, caíste en una pradera donde crecen alisos pequeños con madera fina, rocas pequeñas y juncos.</p>
         
     </article>
 
@@ -42,9 +42,6 @@
         </ul>
         
     </details>
-
-
-
 
 
     <footer>
