--- a/Comienzo/Muerte/MoristeLobo.html
+++ b/Comienzo/Muerte/MoristeLobo.html
@@ -8,12 +8,12 @@
 <body>
 
     <header>
-        <h1>Muerte en el bosque</h1>
+        <h1>Muerte por Lobos</h1>
     </header>
 
     <article>
-        <p>No tienes con qué defenderte, eres un simple homo sapiens sin defensa alguna.</p>
-        <p>El tigre de corta con sus garras y luego te come.</p>
+        <p>Los lobos se dan cuenta de ti. Al ser una amenaza, te atacan a ti antes que a cualquiera.</p>
+        <p>Ambos lobos se te lanzan encima. Mordiendote por todos lados y descuartizandote.</p>
 
         
     </article>
