--- a/Comienzo/Muerte/MoristeTejon.html
+++ b/Comienzo/Muerte/MoristeTejon.html
@@ -8,12 +8,12 @@
 <body>
 
     <header>
-        <h1>Muerte en el bosque</h1>
+        <h1>Muerte por Tejón</h1>
     </header>
 
     <article>
-        <p>No tienes con qué defenderte, eres un simple homo sapiens sin defensa alguna.</p>
-        <p>El tigre de corta con sus garras y luego te come.</p>
+        <p>Mataste a la cabra exitosamente. Pero el tejón se fija en ti. Enojado porque le quitaste su presa.</p>
+        <p>El tejón se lanza hacia ti con furia y sin arma en mano no puedes defenderte. </p>
 
         
     </article>
