Final modifications and final. Add images.

--- a/Comienzo/Muerte/Moristeoso.html
+++ b/Comienzo/Muerte/Moristeoso.html
@@ -8,12 +8,12 @@
 <body>
 
     <header>
-        <h1>Muerte por Mamut</h1>
+        <h1>Muerte por Oso</h1>
     </header>
 
     <article>
-        <p>Al estar tan agitado, chocaste con un mamut. Lo asustaste y se puso a la defensiva.</p>
-        <p>Mueres por un fuerte ataque de un mamut.</p>
+        <p>No eres nada para el oso. El oso se pone a la defensiva, parandose en dos patas para ser más intimidante.</p>
+        <p>Te golpea sin parar y comienza a morderte por doquier.</p>
 
         
     </article>
