--- a/Comienzo/Muerte/Moristetigre.html
+++ b/Comienzo/Muerte/Moristetigre.html
@@ -8,12 +8,12 @@
 <body>
 
     <header>
-        <h1>Muerte por Mamut</h1>
+        <h1>Muerte por Tigre dientes de sable</h1>
     </header>
 
     <article>
-        <p>Al estar tan agitado, chocaste con un mamut. Lo asustaste y se puso a la defensiva.</p>
-        <p>Mueres por un fuerte ataque de un mamut.</p>
+        <p>El tigre vuelve a la defensiva. Tus brazos no son suficientes para ahorcar a la bestia.</p>
+        <p>Te muerde los brazos y termina comiendote a ti y a la otra persona.</p>
 
         
     </article>
