--- a/Comienzo/lobo.html
+++ b/Comienzo/lobo.html
@@ -38,7 +38,7 @@
         <summary>¿A decides?</summary>
         <ul>
         
-            <li><a href="Final.html">Acariciar al tigre</a></li>
+            <li><a href="Final.html">Acariciar al oso</a></li>
             <li><a href="Muerte/Moristetigre.html">Tomar al tigre por el cuello </a></li>
             
         </ul>
