--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </article>
 
     <figure>
-        <img src="imagenes/paisaje.jpg" alt="paisaje" width="300"> 
+        <img src="/imagenes/paisaje.jpg" alt="paisaje" width="300"> 
         <figcaption>Despiertas en medio de un área rocosa y boscosa. Te ves rodeado de elefantes lanudos, aves grandes y torpes, y, a lo lejos, un felino de enormes y destacados colmillos.</figcaption>
     </figure>
 
