--- a/Comienzo/comienzo.html
+++ b/Comienzo/comienzo.html
@@ -25,7 +25,7 @@
     </article>
 
     <figure>
-        <img src="../imagenes/bosque.jpg" alt="bosque" width="300"> 
+        <img src="../imagenes/Bosque.jpg" alt="bosque" width="300"> 
     </figure>
 
     <details>
